...
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/task_failed"

                android:layout_alignParentBottom="true"/>

            <Button
                android:id="@+id/buttonCompleteTask"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="?android:attr/selectableItemBackground"
...
