<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:weightSum="1"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/createTaskBack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/createTask"
        android:id="@+id/createTaskLabel"
        android:layout_gravity="center_horizontal" />

    <EditText
            android:id="@+id/taskName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/taskNameHint" />

    <EditText
            android:id="@+id/taskDescription"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/taskDescriptionHint" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/taskCategorySpinner" />



    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datePickerText"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:id="@+id/datePickerLabel"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"></DatePicker>

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:timePickerMode="spinner"></TimePicker>

    </LinearLayout>
    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/difficulty"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:id="@+id/difficultyLabel"
        android:layout_gravity="center_horizontal" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/colorStar"
        android:layout_gravity="bottom|center_horizontal"
        android:id="@+id/difficultyBar" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editDate"
            android:layout_gravity="left"
            android:layout_weight=".5"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:hint="DD-MM-YYYY"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTime"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:layout_gravity="right"
            android:layout_weight=".5"
            android:hint="HH:MM"/>
    </LinearLayout>


</LinearLayout>
